--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
         <div class="logo">
          <h1>SOS Afrique</h1>
         </div>
+        <div class="liens">
+            <ul>
+              <li><a href="">Accueil</a></li>
+              <li><a href="">Qui sommes-nous</a></li>
+              <li><a href="">Nos actions</a></li>
+              <li><a href="">Contact</a></li>
+              
+            </ul>
+    
+          </div>
 
     </nav>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
